# dakota

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  DakotaVersion.cmake  EffGlobalMinimizer.cpp  EffGlobalMinimizer.hpp  INSTALL  LICENSE  Makefile.am  Makefile.export.in  README  configure.ac  external.local  externals.local  snapshot_rol.sh  sync.local-git.sh  sync.local.py
docs/: CMakeLists.txt  Dakota.bib  DakotaDefs.tex  DakotaDefs.tex.cmake.in  Dev_Fn_Evals.dox  Dev_Iterator_Flow.dox  Dev_Library.dox  Dev_Main.dox  Dev_Recomm_Pract.dox  Dev_Software_Tools.dox  Dev_Spec_Change.dox  Dev_Style_Conventions.dox  Dev_Vars_ContViews.dox  Doxyfile  Doxyfile-newref  Doxyfile-newref.cmake.in  Doxyfile-ref  Doxyfile-ref.cmake.in  Doxyfile.cmake.in  ListFilterEmacsBackups.cmake  Makefile.am  NewRef_Input_Spec.dox  NewRef_Main.dox  NewRef_Sample_Inputs.dox  NewRef_Topics_Intro.dox  README  README.latex  Ref_Bibliography.dox  Ref_Environment.dox  Ref_HDF5_Output.dox  Ref_Input_Spec.dox  Ref_Interface.dox  Ref_Intro.dox  Ref_Keywords_Intro.dox  Ref_Main.dox  Ref_Method.dox  Ref_Model.dox  Ref_Responses.dox  Ref_Sample_Inputs.dox  Ref_Spec_Summary.dox  (+26 more)
docs-sphinx/: CMakeLists.txt
docs-sphinx/source/: Dakota.bib  classictoc.md  classictoc.rst  conf.py  index.rst  setupdakota.md  setupdakota.rst
docs/KeywordMetadata/: DUPLICATE-NPSOL-constraint_tolerance  DUPLICATE-NPSOL-convergence_tolerance  DUPLICATE-active_only  DUPLICATE-actual_model_pointer  DUPLICATE-adapt_import  DUPLICATE-adapt_order  DUPLICATE-adapt_rank  DUPLICATE-adaptive  DUPLICATE-adaptive_metropolis  DUPLICATE-additive  DUPLICATE-adjacency_matrix  DUPLICATE-algebraic_console  DUPLICATE-algebraic_file  DUPLICATE-allocation_control-greedy  DUPLICATE-allow_existing_results  DUPLICATE-annotated  DUPLICATE-approx_method_pointer  DUPLICATE-aprepro  DUPLICATE-argaez_tapia  DUPLICATE-arithmetic_tolerance  DUPLICATE-askey  DUPLICATE-basis_pursuit  DUPLICATE-basis_pursuit_denoising  DUPLICATE-basis_type  DUPLICATE-basis_type-advancements  DUPLICATE-basis_type-soft_convergence_limit  DUPLICATE-basis_type-total_order  DUPLICATE-batch_size  DUPLICATE-bfgs  DUPLICATE-binary_archive  DUPLICATE-bit_random  DUPLICATE-blocking  DUPLICATE-build_samples  DUPLICATE-categorical  DUPLICATE-centering_parameter  DUPLICATE-chain_samples  DUPLICATE-collocation_points  DUPLICATE-collocation_points_sequence  DUPLICATE-collocation_ratio  DUPLICATE-combined  (+1543 more)
docs/Reference/: CMakeLists.txt  InputSpecSummary  InputSpec_5_3.modified  InputSpec_5_4.modified  README  TopicTree
docs/SANDreport/: NNSA_logo.eps  SANDreport.cls  SANDtemplate.tex
docs/TopicMetadata/: topic-bayesian_calibration  topic-continuous_variables  topic-dakota_IO  topic-dakota_concepts  topic-design_and_analysis_of_computer_experiments  topic-discrete_variables  topic-epistemic_uncertain_variables  topic-evidence_theory  topic-interval_estimation  topic-linear_constraints  topic-method_independent_controls  topic-methods  topic-not_yet_reviewed  topic-objective_function_pointer  topic-optimization_and_calibration  topic-package_conmin  topic-package_ddace  topic-package_dot  topic-package_fsudace  topic-package_hopspack  topic-package_jega  topic-package_nlpql  topic-package_npsol  topic-package_optpp  topic-package_psuade  topic-package_scolib  topic-packages  topic-parameter_studies  topic-pointers  topic-reliability_methods  topic-response_types  topic-responses  topic-sampling  topic-state_variables  topic-stochastic_expansion_methods  topic-uncertainty_quantification  topic-variable_domain  topic-variable_support  topic-variable_type  topic-variables  (+1 more)
docs/common/: DoxygenLayout.xml  dox-stylesheet.css
docs/dev/: CMakeLists.txt  Dev_Fn_Evals.dox  Dev_Main.dox  Dev_Pydantic_Spec.dox  Doxyfile.cmake.in  (+5 more)
examples/: CMakeLists.txt  Makefile.am  README  generate_output.sh
external_proj/: BuildDakotaTemplate.cmake  CMakeLists.txt
interfaces/: CMakeLists.txt
python/: CMakeLists.txt
scripts/: CMakeLists.txt  dakota-ui.sh  dakota.bat  dakota.sh  dprepro  dprepro.perl  finish_install.sh  jenkins_build.cmake
src/: #dakota.input.nspec#  .clang-format  APPSEvalMgr.C  APPSEvalMgr.H  APPSEvalMgr.cpp  APPSEvalMgr.hpp  APPSOptimizer.C  APPSOptimizer.H  APPSOptimizer.cpp  APPSOptimizer.hpp  ActiveSubspaceModel.cpp  ActiveSubspaceModel.cpp.orig  ActiveSubspaceModel.hpp  ActiveSubspaceModel.hpp.orig  AdaptedBasisModel.cpp  AdaptedBasisModel.hpp  AdapterModel.cpp  AdapterModel.hpp  AnalysisCode.C  AnalysisCode.H  AnalysisCode.cpp  AnalysisCode.hpp  ApplicationInterface.C  ApplicationInterface.H  ApplicationInterface.cpp  ApplicationInterface.hpp  ApproximationFieldInterface.cpp  ApproximationFieldInterface.hpp  ApproximationInterface.C  ApproximationInterface.H  ApproximationInterface.cpp  ApproximationInterface.hpp  ApreproParametersFileWriter.cpp  ApreproParametersFileWriter.hpp  BinaryIO_Helper.cpp  BinaryIO_Helper.hpp  BootstrapSampler.hpp  C3Approximation.cpp  C3Approximation.hpp  C3FnTrainData.cpp  (+916 more)
test/: CMakeLists.txt  Makefile.am  Makefile.dist  TestLabelsAcceptance.cmake  acro_test.pl  barnes.C  barnes.cpp  barnes_lf.C  barnes_lf.cpp  binary_io_test.cpp  cantilever.C  cantilever.cpp  cantilever3.cpp  container.C  container.cpp  container.script  container_alt.c  container_alt.f  container_unit_tests.C  container_unit_tests.H  container_unit_tests.cpp  container_unit_tests.hpp  cyl_head.C  cyl_head.cpp  dakota_10d_rosenbrock_queso.base  dakota_10d_rosenbrock_queso.in  dakota_10d_rosenbrock_queso.pbase  dakota_3pc.ac.1.sub.sh  dakota_3pc.ac.2.sub.sh  dakota_3pc.ac.sh  dakota_3pc.ac.sub.sh  dakota_3pc.ac_verb.sh  dakota_3pc.base  dakota_3pc.if.sub.sh  dakota_3pc.if_verb.sh  dakota_3pc.in  dakota_3pc.of.sh  dakota_3pc.of.sub.sh  dakota_3pc.of_verb.sh  dakota_4level.base  (+906 more)
unit_test/: CMakeLists.txt  auto_unit_test.cpp  bootstrap_util_test.cpp  data_conversions.cpp  expt_data.cpp  expt_data_reader.cpp  file_reader.cpp  leja_sampling.cpp  min_unit_test.cpp  proposalCov.m  reduced_basis.cpp  test_field_covariance_utils.cpp  test_workdir_utils.cpp  uthelper.bat
(+4555 files in other folders)
